[metadata]
name = tcppinglib
version = 1.0.3
description = An Easy Way to Measure the Connectivity and Latency with TCP Ping
keywords = tcp, tcpsockets, tcpping, multitcpping, async, asyncio, ipv4, ipv6, python, python3

author = Engin EKEN
author_email = e.eken@outlook.com

long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EnginEken/tcppinglib

license = GNU Lesser General Public License v3.0
license_file = LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = tcppinglib
python_requires = >=3.7